# rk_ffmpeg

./: CMakeLists.txt  README.md  capture_screen.cpp  command_push.h  pull_stream_with_control_keyboard_and_mouse.cpp  push_stream_with_control_keyboard_and_mouse.cpp  push_stream_with_ffmpeg.cpp
include/: command.h  command_mpp.h  ffmpeg_head.h  ffmpeg_with_mpp.h
src/: capture_screen.cpp  pull_stream_with_control_keyboard_and_mouse.cpp  push_stream_with_control_keyboard_and_mouse.cpp  push_stream_with_ffmpeg.cpp  rtsp_with_ffmpeg_using_opencv.cpp  rtsp_with_mpp_using_opencv.cpp  rtsp_with_mpp_using_opencv_rgb.cpp
